fixed iamge upload and user detail updates